--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,9 +19,18 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 90%;
+}
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+.mainText {
+  text-align: center;
+}
