--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,3 +1,4 @@
+/* Navigation Bar Styling */
 nav {
   background-color: #4056A1;
   color: #ffffff;
@@ -5,8 +6,8 @@ nav {
   width: 100%;
   padding-right: 1.5em;
   padding-left: 1.5em;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
