--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,4 @@
+/* Styling the New Tweet area */
 .new-tweet {
   display: flex;
   flex-direction: column;
@@ -30,6 +31,7 @@ form {
   float: right;
 }
 
+/* Tweet button styling */
 button {
   background-color: #4056A1;
   color: white;
@@ -39,10 +41,12 @@ button {
   font-family: 'Bungee', sans-serif;
 }
 
+/* Red colour to use when the character limit is exceeded */
 .red {
   color: red;
 }
 
+/* Styling the error messages */
 .errorLong {
   display: none;
   color: red;
@@ -53,6 +57,8 @@ button {
   padding-right: 0.5em;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
 .errorShort {
@@ -65,4 +71,6 @@ button {
   padding-right: 0.5em;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
